# My-Projects

./: README.md
P2P 网贷违约预测/: P2P 网贷违约预测.ipynb  README.md  variable dictionary.xlsx
Personal_Financial_Planning_Program/: CMakeLists.txt  CSVInputReader.cpp  CSVInputReader.hpp  Client.cpp  Client.hpp  FinPlanningProgram.cpp  FinPlanningProgram.hpp  FixedWidthInputReader.cpp  FixedWidthInputReader.hpp  InputReader.cpp  InputReader.hpp  People.csv  People.tsv  README.md  main.cpp
Sudoku_Solver/: Backtracking.cpp  Backtracking.hpp  CMakeLists.txt  README.md  ex1.csv  ex2.csv  main.cpp
shixiseng/: README.md  email_sender.py  get_hack_number.py  main.py  shixiseng_crawler.py
交易系统的风险控制策略/: README.md  交易系统的风险控制策略.ipynb
